fixed layout issues on small screens

--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -18,7 +18,7 @@ body {
   color: #4c4a4a;
   margin-left: 10px;
   font-weight: bold;
-  margin-top: 20px;
+  margin-top: 10px;
 }
 
 .form-container {
@@ -54,13 +54,12 @@ input {
   padding: 10px;
   display: flex;
   justify-content: center;
-  margin-bottom: 45px;
 }
 .dots-container {
   display: flex;
   text-align: center;
   align-items: center;
-  margin: 20px;
+  margin: 10px;
 }
 .dot {
   height: 25px;
@@ -89,7 +88,7 @@ input {
   text-align: left;
   overflow: scroll;
   width: 100%;
-  height: 300px;
+  max-height: 200px;
   font-size: 12px;
 }
 
